[project]
name = "hexlet-code"
version = "0.1.0"
authors = "Viktor"
description = "A collection of games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]


[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:run"
brain-calc = "brain_games.scripts.brain_calc:run"
brain-gcd = "brain_games.scripts.brain_gcd:run"
brain-progression = "brain_games.scripts.brain_progression:run"
brain-prime = "brain_games.scripts.brain_prime:run"


